add_subdirectory(backend)
add_subdirectory(dynamatic)
add_subdirectory(dynamatic-mlir-lsp-server)
add_subdirectory(dynamatic-opt)
add_subdirectory(export-dot)
add_subdirectory(export-cfg)
add_subdirectory(export-rtl)
add_subdirectory(hls-verifier)
add_subdirectory(integration)
add_subdirectory(mem-dep-analysis)
add_subdirectory(translate-llvm-to-std)
